# JPEG-Decoder

./: CMakeLists.txt  README.md
Include/: Decoder.h  DecoderData.h  Exceptions.h  FFT.h  Huffman.h  Image.h  MCUReader.h  STDInclude.h  Section.h  SectionDetector.h  StreamNavigator.h
Source/: Decoder.cpp  DecoderData.cpp  FFT.cpp  Huffman.cpp  Section.cpp  SectionDetector.cpp
Test/: Main.cpp
